# ScopeGUI

./: .gitignore  .gitmodules  App.cpp  App.h  CMakeLists.txt  README.md  imgui.ini  main.cpp
.github/workflows/: build.yml  macos.yml  ubuntu.yml  windows.yml
App/: App.cpp  App.h  AppContent.h  AppContext.h  CMakeLists.txt  Portable.h  Utils.h  fft.c  fft.h  widgets.cpp  widgets.h
App/algorithm/: MsgAnalyzer.cpp  MsgAnalyzer.h  fft.c  fft.h
App/base/: noncopyable.h
App/comm/: Comm.cpp  Comm.h
App/ui/: UI.h  UICmd.cpp  UICmd.h  UIComm.cpp  UIComm.h  UIFFT.cpp  UIFFT.h  UIVol.cpp  UIVol.h  commondef.cpp  commondef.h
App/ui/widgets/: plot_fft.cpp  plot_vol.cpp  plot_vol.h
App/utils/: Utils.cpp
scripts/: cloc.sh
